--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.1
+Date: 2023-10-21
+  Fixes:
+    - Fixed crash on death for non-tracked entities
+
+---------------------------------------------------------------------------------------------------
 Version: 0.1.0
-Date: 2023-xx-xx
+Date: 2023-10-20
   Info:
     - Initial release
