--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.2
+Date: 2024-03-24
+  Bugfixes:
+    - Fixed crash with furnaces
+---------------------------------------------------------------------------------------------------
 Version: 0.1.1
 Date: 2023-10-21
-  Fixes:
+  Bugfixes:
     - Fixed crash on death for non-tracked entities
 
 ---------------------------------------------------------------------------------------------------
