--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.0
+Date: 2024-11-18
+  Changes:
+    - Update to 2.0
+---------------------------------------------------------------------------------------------------
 Version: 0.1.2
 Date: 2024-03-24
   Bugfixes:
