--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.4
+Date: 2024-12-19
+  Bugfixes:
+    - Fixed renders for furnaces
+---------------------------------------------------------------------------------------------------
 Version: 2.0.3
 Date: 2024-12-19
   Bugfixes:
